fix deprecated dependencies and layout issues

--- a/src/components/coin-card/coin-card.styles.css
+++ b/src/components/coin-card/coin-card.styles.css
@@ -1,6 +1,6 @@
 .coin-card {
   width: 350px;
-  margin: 12px 0;
+  margin: 8px;
   padding: 20px;
   border-radius: 5%;
 }
