--- a/src/components/footer/footer.styles.css
+++ b/src/components/footer/footer.styles.css
@@ -1,4 +1,5 @@
 .footer {
+    margin-top: auto;
     padding: 20px;
     background-color: #232931;
 }
